--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "MakeCode_Debugger",
     "version": "0.0.1",
-    "homepage": "https://schneidercode.github.io/MakeCode_Debugger/"
+    "homepage": "https://schneidercode.github.io/MakeCode_Debugger/",
     "scripts": {
         "build:dev": "./node_modules/.bin/webpack --mode development --config webpack.dev.js",
         "build:prod": "./node_modules/.bin/webpack --mode production --config webpack.prod.js",
